--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2
   http: ^0.13.5
   # save image
+  gallery_saver: ^2.3.2
   
   # path provider
   path_provider: ^2.0.14
