--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,11 +43,26 @@ dependencies:
   
   # path provider
   path_provider: ^2.0.14
+  flutter_animate: ^4.1.1+1
+  
+
+
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+      # for icon
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+
+  image_path: "assets/images/logo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -68,8 +83,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
