--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   # path provider
   path_provider: ^2.0.14
   flutter_animate: ^4.1.1+1
+
+  # swipe widget
+  flutter_swipe_button: ^2.1.1+1
   
 
 
